Partial add latest novels support for ranobes source. Antibotcloud solver is broken.